# AIFFEL_QUEST

./: .gitignore  MainQst03_stats.ipynb  README.md  SubqstC02_avengersVoca.ipynb  bank_account_manager.ipynb
MainQuest/: Mainqst02_feature_engineering  Mainqst02_feature_engineering.ipynb
MainQuest/04_credit_card-fraud_detection/: Untitled.ipynb  notebook.ipynb
MainQuest/08_DKTC/: DKTC_ds8.ipynb
MainQuest/10_rcm_node_aiffel/: .gitignore  README.md  pyproject.toml  requirements.txt  tf_device.py
MainQuest/10_rcm_node_aiffel/autoint/: __init__.py  autoint.py  autointmlp.py  paths.py  show_st.py  show_st_plus.py  tf_device.py
MainQuest/10_rcm_node_aiffel/autoint/notebook/: autoint_mlp_train.ipynb  model_load_test.ipynb
MainQuest/10_rcm_node_aiffel/experiments/notebooks/: autoint_plus_experiments.ipynb
MainQuest/10_rcm_node_aiffel/experiments/results/: autoint_plus_results.md  autoint_plus_results_template.csv
MainQuest/Mainqst04_credit_card-fraud_detection/: notebook.ipynb  submission_rf_t0.30.csv  submission_rf_t0.35.csv  submission_rf_t0.39.csv  submission_rf_t0.42.csv  submission_rf_t0.45.csv  submission_rf_t0.50.csv  xgb_tuned_bundle.joblib
MainQuest/Mainqst05-house-prices-prediction/: notebook.ipynb
MainQuest/Mainqst07-DataThon/: Airbnb_NewUserBooking.ipynb
SubQuest/: SubqstC02_avengersVoca.ipynb
SubQuest/01_numbaseball/: SubqstC02_avengersVoca.ipynb.textClipping
SubQuest/02_avengersVoca/: readme.md
SubQuest/03_bankAccount/: readme.md
SubQuest/10_rockscissorpaper/: readme.md
project/: Untitled.ipynb  readme.md  꽃분류_VGG_전이V1.ipynb
(+5 files in other folders)
