[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoint-aiffel"
version = "0.1.0"
description = "AutoInt recommendation project for AIFFEL"
requires-python = ">=3.11,<3.13"

[tool.setuptools]
py-modules = ["tf_device"]

[tool.setuptools.packages.find]
include = ["autoint*"]
